--- a/Code-Along/L1-if-statements.ipynb
+++ b/Code-Along/L1-if-statements.ipynb
@@ -21,23 +21,7 @@
      ]
     }
    ],
-   "source": [
-    "# variable - data type string\n",
-    "# create a variable (\"box\") and assigns a value\n",
-    "name = \"Joel\"\n",
-    "\n",
-    "# variable - data type float\n",
-    "age = 31.4\n",
-    "\n",
-    "# this is an f-string (formatted string)\n",
-    "print(f\"hej {name}, du är {age} gammal\")\n",
-    "\n",
-    "# reassigns \n",
-    "# note: bad practice \n",
-    "name = 20\n",
-    "\n",
-    "print(name)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -56,6 +40,105 @@
     "age = input(\"What is your age?\")\n",
     "\n",
     "print(f\"Hello {name}, you are {age} years old\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## if - elif - else"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from msilib.schema import Condition\n",
+    "import py_compile\n",
+    "\n",
+    "if condition:\n",
+    "    statement_1\n",
+    "    ...\n",
+    "    statement_n\n",
+    "elif condition:\n",
+    "    statement_1\n",
+    "    ...\n",
+    "    statement_m\n",
+    "...\n",
+    "elif condition:\n",
+    "    ...\n",
+    "    else:\n",
+    "        statements\n",
+    "        ...\n",
+    "program continues ...\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "weight=50.0\n",
+      "50.0=]\n",
+      "Give patient 1000mg\n"
+     ]
+    }
+   ],
+   "source": [
+    "weight = float(input(\"Enter patients weight(kg):\")) \n",
+    "print(f\"{weight=}\")\n",
+    "\n",
+    "# now we convert it to a float\n",
+    "weight = float(weight)\n",
+    "print (f\"{weight}=]\")\n",
+    "    \n",
+    "if weight < 20:\n",
+    "    print(\"Give patient 500mg\")\n",
+    "elif weight < 40:\n",
+    "    print(\"Give patient 750mg\")\n",
+    "else:\n",
+    "    print (\"Give patient 1000mg\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Nested if-statements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 divisible by 5\n",
+      "Even number\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = 10\n",
+    "\n",
+    "if number % 5 == 0:\n",
+    "    print(f\"{number} divisible by 5\")\n",
+    "    if number % 2 == 0:\n",
+    "        print(\"Even number\")\n",
+    "    else:\n",
+    "        print(\"Odd number\")\n",
+    "else:\n",
+    "    print(\"Not divisible by 5\")\n"
    ]
   }
  ],
