input statements while code along

--- a/Code-Along/L0-Input-Output.ipynb
+++ b/Code-Along/L0-Input-Output.ipynb
@@ -1,17 +1,33 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Code along Input-Output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hej Joel, du är 27 gammal\n",
+      "20\n"
+     ]
+    }
+   ],
    "source": [
     "# variable - data type string\n",
     "# create a variable (\"box\") and assigns a value\n",
     "name = \"Joel\"\n",
     "\n",
     "# variable - data type float\n",
-    "age = 31.4\n",
+    "age = 27\n",
     "\n",
     "# this is an f-string (formatted string)\n",
     "print(f\"hej {name}, du är {age} gammal\")\n",
@@ -21,6 +37,104 @@
     "name = 20\n",
     "\n",
     "print(name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inputs from user"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Joel, you are 50 years old\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input(\"What is your name?\")\n",
+    "age = input(\"What is your age?\")\n",
+    "\n",
+    "print(f\"Hello {name}, you are {age} years old\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your force is 608.84 N\n"
+     ]
+    }
+   ],
+   "source": [
+    "gravity = 9.82\n",
+    "mass = 62\n",
+    "\n",
+    "force = mass*gravity\n",
+    "\n",
+    "print(f\"Your force is {force} N\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mass = int(input(\"Enter your mass (kg): \")) # string\n",
+    "\n",
+    "# can't multiply string with a float\n",
+    "force = mass*gravity "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "force=491.0N\n",
+      "491.0 { }\n",
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "mass = float(input(\"Enter your mass (kg): \")) # string\n",
+    "\n",
+    "# can't multiply string with a float\n",
+    "force = mass*gravity\n",
+    "\n",
+    "# :.1f -> rounds to 1 decimal\n",
+    "print(f\"{force=:.1f}N\")\n",
+    "# <=> print(f\"force={force:.1f}N\")\n",
+    "\n",
+    "# in order to print {} curly brackets\n",
+    "print(f\"{force} \\u007b \\u007d\")\n",
+    "print(f\"{{}}\")"
    ]
   }
  ],
