--- a/Code-Along/L1-if-statements.ipynb
+++ b/Code-Along/L1-if-statements.ipynb
@@ -8,38 +8,148 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hej Kokchun, du är 31.4 gammal\n",
-      "20\n"
-     ]
-    }
-   ],
-   "source": []
+   "source": [
+    "## if statements"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Inputs from user\n"
+    "## if-else"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Du är 10 år gammal, gränsen är 18\n",
+      "Du får inte gå in i puben\n"
+     ]
+    }
+   ],
    "source": [
-    "name = input(\"What is your name?\")\n",
-    "age = input(\"What is your age?\")\n",
+    "age = int(input(\"Hur gammal är du?\"))\n",
     "\n",
-    "print(f\"Hello {name}, you are {age} years old\")"
+    "if age < 18:\n",
+    "    print(f\"Du är {age} år gammal, gränsen är 18\")\n",
+    "    print(\"Du får inte gå in i puben\")\n",
+    "else:\n",
+    "    print(\"Välkommen in\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Du får åka balder\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = 15\n",
+    "height = 135\n",
+    "\n",
+    "# other languages \n",
+    "# && for and \n",
+    "# || for or\n",
+    "if age > 10 and height > 130:\n",
+    "    print(\"Du får åka balder\")\n",
+    "else:\n",
+    "    print(\"Du får inte åka balder\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Du får åka balder\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = 15\n",
+    "height = 210\n",
+    "\n",
+    "if age > 10 and 130 < height <= 210:\n",
+    "    print(\"Du får åka balder\")\n",
+    "else:\n",
+    "    print(\"Du får inte åka balder\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Modulo Operator %\n",
+    "\n",
+    "Gives the rest after an integer division\n",
+    "\n",
+    "Ex\n",
+    "\n",
+    "5 % 3 = 2\n",
+    "22 % 9 = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jämnt tal\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = 42\n",
+    "\n",
+    "# 2 equal signs => checks if left is equal to right\n",
+    "if number % 2 == 0:\n",
+    "    print(\"jämnt tal\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3==4: False\n",
+      "3==3: True\n",
+      "3>=3: True\n",
+      "3!=3: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"3==4: {3 == 4}\") \n",
+    "print(f\"3==3: {3 == 3}\") # equal operator\n",
+    "print(f\"3>=3: {3 >= 3}\") # larger than or equal operator\n",
+    "print(f\"3!=3: {3 != 3}\") # not equal operator"
    ]
   },
   {
@@ -50,14 +160,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from msilib.schema import Condition\n",
-    "import py_compile\n",
-    "\n",
     "if condition:\n",
     "    statement_1\n",
     "    ...\n",
@@ -69,42 +174,43 @@
     "...\n",
     "elif condition:\n",
     "    ...\n",
-    "    else:\n",
-    "        statements\n",
-    "        ...\n",
-    "program continues ...\n",
-    "\n"
+    "else:\n",
+    "    statements\n",
+    "    ...\n",
+    "\n",
+    "program continues ..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "weight=50.0\n",
-      "50.0=]\n",
+      "weight='100'\n",
+      "weight=100.0\n",
       "Give patient 1000mg\n"
      ]
     }
    ],
    "source": [
-    "weight = float(input(\"Enter patients weight(kg):\")) \n",
+    "# weight is a string here\n",
+    "weight = input(\"Enter patients weight (kg): \")\n",
     "print(f\"{weight=}\")\n",
     "\n",
     "# now we convert it to a float\n",
     "weight = float(weight)\n",
-    "print (f\"{weight}=]\")\n",
-    "    \n",
-    "if weight < 20:\n",
+    "print(f\"{weight=}\")\n",
+    "\n",
+    "if weight < 20: \n",
     "    print(\"Give patient 500mg\")\n",
     "elif weight < 40:\n",
     "    print(\"Give patient 750mg\")\n",
     "else:\n",
-    "    print (\"Give patient 1000mg\")\n"
+    "    print(\"Give patient 1000mg\")"
    ]
   },
   {
@@ -116,18 +222,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10 divisible by 5\n",
-      "Even number\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "number = 10\n",
     "\n",
