--- a/Code-Along/LF2-While-statements.ipynb
+++ b/Code-Along/LF2-While-statements.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Wile loop\n",
+    "# While loop\n",
     "\n",
     "\n",
     "\n",
