If-statements code along

--- a/Code-Along/L1-if-statements.ipynb
+++ b/Code-Along/L1-if-statements.ipynb
@@ -42,7 +42,9 @@
     "    print(f\"Du är {age} år gammal, gränsen är 18\")\n",
     "    print(\"Du får inte gå in i puben\")\n",
     "else:\n",
-    "    print(\"Välkommen in\")"
+    "    print(\"Välkommen in\")\n",
+    "\n",
+    "    "
    ]
   },
   {
