--- a/Code-Along/L1-if-statements.ipynb
+++ b/Code-Along/L1-if-statements.ipynb
@@ -23,14 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Du är 10 år gammal, gränsen är 18\n",
+      "Du är 0 år gammal, gränsen är 18\n",
       "Du får inte gå in i puben\n"
      ]
     }
@@ -49,19 +49,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Du får åka balder\n"
+      "Du får inte åka balder\n"
      ]
     }
    ],
    "source": [
-    "age = 15\n",
+    "age = 10\n",
     "height = 135\n",
     "\n",
     "# other languages \n",
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -185,16 +185,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "weight='100'\n",
-      "weight=100.0\n",
-      "Give patient 1000mg\n"
+      "weight='10'\n",
+      "weight=10.0\n",
+      "Give patient 500mg\n"
      ]
     }
    ],
@@ -207,9 +207,9 @@
     "weight = float(weight)\n",
     "print(f\"{weight=}\")\n",
     "\n",
-    "if weight < 20: \n",
+    "if weight < 20:   ##Om vikten är mindre än 20 så ge patienten 500\n",
     "    print(\"Give patient 500mg\")\n",
-    "elif weight < 40:\n",
+    "elif weight < 40:   ## Om vikten är mer än\n",
     "    print(\"Give patient 750mg\")\n",
     "else:\n",
     "    print(\"Give patient 1000mg\")"
@@ -224,11 +224,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15 divisible by 5\n",
+      "Odd number\n"
+     ]
+    }
+   ],
    "source": [
-    "number = 10\n",
+    "number = 15\n",
     "\n",
     "if number % 5 == 0:\n",
     "    print(f\"{number} divisible by 5\")\n",
@@ -243,7 +252,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit",
+   "display_name": "Python 3.9.13 ('PythonSchool-iXQr8Z-p')",
    "language": "python",
    "name": "python3"
   },
@@ -262,7 +271,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "958a9210e5eed5eb21a37baf529fded8d3cf9f5344114e9547bddde819fb25fe"
+    "hash": "ede0424b5117af074b0a15022a0db7920ce0c06d0370a7c1883de86effeccc15"
    }
   }
  },
