--- a/Code-Along/LF2-While-statements.ipynb
+++ b/Code-Along/LF2-While-statements.ipynb
@@ -186,7 +186,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit",
+   "display_name": "Python 3.9.13 ('PythonSchool-iXQr8Z-p')",
    "language": "python",
    "name": "python3"
   },
@@ -205,7 +205,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "958a9210e5eed5eb21a37baf529fded8d3cf9f5344114e9547bddde819fb25fe"
+    "hash": "ede0424b5117af074b0a15022a0db7920ce0c06d0370a7c1883de86effeccc15"
    }
   }
  },
