--- a/Excercise/00-InOutput-Count-with-Python.ipynb
+++ b/Excercise/00-InOutput-Count-with-Python.ipynb
@@ -29,7 +29,7 @@
     "b = 4**2\n",
     "c = math.sqrt(a + b)\n",
     "\n",
-    "print(f\"The value of C is {c}\")\n"
+    "print(f\"The value of C is {c}\")"
    ]
   },
   {
