--- a/Excercise/01-If-count-with-python.ipynb
+++ b/Excercise/01-If-count-with-python.ipynb
@@ -59,7 +59,7 @@
     "if number1 < number2:\n",
     "    print(\"The smallest number is\", number1)\n",
     "else:\n",
-    "    print(\"The smallest number is\", number2)\n"
+    "    print(\"The smallest number is\", number2)"
    ]
   },
   {
