--- a/Code-Along/L0-Input-Output.ipynb
+++ b/Code-Along/L0-Input-Output.ipynb
@@ -92,7 +92,7 @@
     "\n",
     "force = mass*gravity\n",
     "\n",
-    "print(f\"Your force is {force} N\")"
+    "print(f\"Your force is {force} N\")\n"
    ]
   },
   {
