--- a/Code-Along/LF2-While-statements.ipynb
+++ b/Code-Along/LF2-While-statements.ipynb
@@ -180,7 +180,7 @@
     "plt.grid()\n",
     "plt.xlabel(\"hours\")\n",
     "plt.ylabel(\"number of bacterias\")\n",
-    "plt.title(\"bacerias in milk room temperature\")\n"
+    "plt.title(\"bacerias in milk room temperature\")"
    ]
   }
  ],
