--- a/Code-Along/L2-While-statements.ipynb
+++ b/Code-Along/L2-While-statements.ipynb
@@ -78,7 +78,7 @@
     "while birds >= 8000:\n",
     "    birds = birds/2\n",
     "    year += 1\n",
-    "print(f\"Years={year}\")"
+    "print(f\"Years={year}\")\n"
    ]
   },
   {
