--- a/Code-Along/L3-For-statements.ipynb
+++ b/Code-Along/L3-For-statements.ipynb
@@ -73,7 +73,7 @@
     "for i in range(10):\n",
     "    my_sum += i \n",
     "\n",
-    "print (f\"0+1+2+...+9 = {my_sum=}\")"
+    "print (f\"0+1+2+...+9 = {my_sum=}\")\n"
    ]
   },
   {
