--- a/Excercise/02-While-Count-with-python.ipynb
+++ b/Excercise/02-While-Count-with-python.ipynb
@@ -76,7 +76,7 @@
     "while i <=100:\n",
     "    sum = sum + i\n",
     "    i = i + 2 \n",
-    "print(sum)"
+    "print(sum)\n"
    ]
   },
   {
