--- a/Code-Along/L1-if-statements.ipynb
+++ b/Code-Along/L1-if-statements.ipynb
@@ -23,18 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Du är 0 år gammal, gränsen är 18\n",
-      "Du får inte gå in i puben\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "age = int(input(\"Hur gammal är du?\"))\n",
     "\n",
@@ -47,17 +38,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Du får inte åka balder\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "age = 10\n",
     "height = 135\n",
@@ -73,17 +56,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Du får åka balder\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "age = 15\n",
     "height = 210\n",
@@ -110,17 +85,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "jämnt tal\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "number = 42\n",
     "\n",
@@ -131,20 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3==4: False\n",
-      "3==3: True\n",
-      "3>=3: True\n",
-      "3!=3: False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"3==4: {3 == 4}\") \n",
     "print(f\"3==3: {3 == 3}\") # equal operator\n",
@@ -183,25 +139,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "weight='10'\n",
-      "weight=10.0\n",
-      "Give patient 500mg\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# weight is a string here\n",
     "weight = input(\"Enter patients weight (kg): \")\n",
     "print(f\"{weight=}\")\n",
     "\n",
-    "# now we convert it to a float\n",
+    "# now we convert it to a float för den ska räkna med decimaler\n",
     "weight = float(weight)\n",
     "print(f\"{weight=}\")\n",
     "\n",
@@ -222,18 +168,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15 divisible by 5\n",
-      "Odd number\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "number = 15\n",
     "\n",
