--- a/Excercise/02-While-Count-with-python.ipynb
+++ b/Excercise/02-While-Count-with-python.ipynb
@@ -81,19 +81,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sorry you guessed incorrectly try again \n",
-      "\n",
-      "Sorry you guessed incorrectly try again \n",
-      "\n",
-      "Sorry you guessed incorrectly try again \n",
-      "\n"
+      "Gissa talet mellan 1 och 100\n",
+      "10 var för litet...\n",
+      "5 var för litet...\n",
+      "6 var för litet...\n",
+      "20 var rätt! Det tog 4 gissningar\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Guess number game\n",
+    "import random\n",
+    "\n",
+    "rand = random.randint(1, 100)\n",
+    "print(\"Gissa talet mellan 1 och 100\")\n",
+    "\n",
+    "i = 1\n",
+    "while i < 100:\n",
+    "    guess = int(input(\"Skriv ett heltal\"))\n",
+    "    if guess == rand:\n",
+    "        print(f\"{guess} var rätt! Det tog {i} gissningar\")\n",
+    "        break\n",
+    "    elif guess > rand:\n",
+    "        print(f\"{guess} är för stort!\")\n",
+    "        i += 1\n",
+    "    else:\n",
+    "        print(f\"{guess} var för litet...\")\n",
+    "        i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stämmer inte svaret är 30\n",
+      "Rätt\n"
      ]
     },
     {
@@ -103,22 +137,32 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\j_osc\\OneDrive\\Documents\\Github\\PythonSchool\\Excercise\\02-While-Count-with-python.ipynb Cell 5\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Excercise/02-While-Count-with-python.ipynb#W6sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mwhile\u001b[39;00m guess \u001b[39m!=\u001b[39m x:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Excercise/02-While-Count-with-python.ipynb#W6sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mSorry you guessed incorrectly try again \u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Excercise/02-While-Count-with-python.ipynb#W6sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     guess \u001b[39m=\u001b[39m \u001b[39mint\u001b[39;49m(\u001b[39minput\u001b[39;49m(\u001b[39m\"\u001b[39;49m\u001b[39mGuess a number between 1-100:\u001b[39;49m\u001b[39m\"\u001b[39;49m))\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Excercise/02-While-Count-with-python.ipynb#W6sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mYou guessed the right number, good job\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;32mc:\\Users\\j_osc\\OneDrive\\Documents\\Github\\PythonSchool\\Excercise\\02-While-Count-with-python.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Excercise/02-While-Count-with-python.ipynb#W5sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m x \u001b[39m=\u001b[39m random\u001b[39m.\u001b[39mrandint(\u001b[39m1\u001b[39m, \u001b[39m10\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Excercise/02-While-Count-with-python.ipynb#W5sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m y \u001b[39m=\u001b[39m random\u001b[39m.\u001b[39mrandint(\u001b[39m1\u001b[39m, \u001b[39m10\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Excercise/02-While-Count-with-python.ipynb#W5sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m guess \u001b[39m=\u001b[39m \u001b[39mint\u001b[39;49m(\u001b[39minput\u001b[39;49m(\u001b[39mf\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mVad är \u001b[39;49m\u001b[39m{\u001b[39;49;00mx\u001b[39m}\u001b[39;49;00m\u001b[39m gånger \u001b[39;49m\u001b[39m{\u001b[39;49;00my\u001b[39m}\u001b[39;49;00m\u001b[39m?\u001b[39;49m\u001b[39m\"\u001b[39;49m))\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Excercise/02-While-Count-with-python.ipynb#W5sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m svar \u001b[39m=\u001b[39m x \u001b[39m*\u001b[39m y\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Excercise/02-While-Count-with-python.ipynb#W5sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mif\u001b[39;00m svar \u001b[39m==\u001b[39m guess:\n",
       "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
      ]
     }
    ],
    "source": [
+    "#Gånger spel  \n",
     "import random\n",
-    "x = random.randint(1,100)\n",
-    "guess = int(input(\"Guess a number between 1-100:\"))\n",
+    "import math\n",
     "\n",
-    "while guess != x:\n",
-    "    print(\"Sorry you guessed incorrectly try again \\n\")\n",
-    "    guess = int(input(\"Guess a number between 1-100:\"))\n",
+    "while True:\n",
+    "    x = random.randint(1, 10)\n",
+    "    y = random.randint(1, 10)\n",
+    "    guess = int(input(f\"Vad är {x} gånger {y}?\"))\n",
+    "    svar = x * y\n",
     "\n",
-    "print(\"You guessed the right number, good job\")\n",
-    "\n"
+    "    if svar == guess:\n",
+    "        print(\"Rätt\")\n",
+    "    else:\n",
+    "        print(f\"Stämmer inte svaret är {svar}\")\n",
+    "        igen = input(\"Vill du spela igen? j/n\")\n",
+    "    if igen == \"j\":\n",
+    "        continue\n",
+    "    else:\n",
+    "        print(\"Tack för att du spelade\") \n",
+    "        break"
    ]
   }
  ],
