--- a/Excercise/02-While-Count-with-python.ipynb
+++ b/Excercise/02-While-Count-with-python.ipynb
@@ -119,26 +119,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stämmer inte svaret är 30\n",
-      "Rätt\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\j_osc\\OneDrive\\Documents\\Github\\PythonSchool\\Excercise\\02-While-Count-with-python.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Excercise/02-While-Count-with-python.ipynb#W5sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m x \u001b[39m=\u001b[39m random\u001b[39m.\u001b[39mrandint(\u001b[39m1\u001b[39m, \u001b[39m10\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Excercise/02-While-Count-with-python.ipynb#W5sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m y \u001b[39m=\u001b[39m random\u001b[39m.\u001b[39mrandint(\u001b[39m1\u001b[39m, \u001b[39m10\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Excercise/02-While-Count-with-python.ipynb#W5sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m guess \u001b[39m=\u001b[39m \u001b[39mint\u001b[39;49m(\u001b[39minput\u001b[39;49m(\u001b[39mf\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mVad är \u001b[39;49m\u001b[39m{\u001b[39;49;00mx\u001b[39m}\u001b[39;49;00m\u001b[39m gånger \u001b[39;49m\u001b[39m{\u001b[39;49;00my\u001b[39m}\u001b[39;49;00m\u001b[39m?\u001b[39;49m\u001b[39m\"\u001b[39;49m))\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Excercise/02-While-Count-with-python.ipynb#W5sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m svar \u001b[39m=\u001b[39m x \u001b[39m*\u001b[39m y\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Excercise/02-While-Count-with-python.ipynb#W5sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mif\u001b[39;00m svar \u001b[39m==\u001b[39m guess:\n",
-      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+      "Stämmer inte svaret är 16\n",
+      "Rätt\n",
+      "Tack för att du spelade\n"
      ]
     }
    ],
@@ -157,12 +147,61 @@
     "        print(\"Rätt\")\n",
     "    else:\n",
     "        print(f\"Stämmer inte svaret är {svar}\")\n",
-    "        igen = input(\"Vill du spela igen? j/n\")\n",
-    "    if igen == \"j\":\n",
+    "        guess = input(\"Vill du spela igen? j/n\")\n",
+    "    if guess == \"j\":\n",
     "        continue\n",
     "    else:\n",
     "        print(\"Tack för att du spelade\") \n",
     "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Check convergence\n",
+    "n, sum = 0, 0\n",
+    "max = 10000\n",
+    "\n",
+    "while n < max:\n",
+    "    sum += 1/(2**n)\n",
+    "    n += 1\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "n, sum = 0, 0 \n",
+    "min = 0.000001\n",
+    "diff = 1\n",
+    "\n",
+    "while diff < min:\n",
+    "    diff += 1/(2**n)\n",
+    "    sum += diff\n",
+    "    n += 1\n",
+    "print(sum)"
    ]
   }
  ],
