--- a/Code-Along/L3-Lists-slicing.ipynb
+++ b/Code-Along/L3-Lists-slicing.ipynb
@@ -175,7 +175,7 @@
     "cubes = []\n",
     "\n",
     "for i in range(10):\n",
-    "    cubes.append(i**3) #iupphöjt i 3\n",
+    "    cubes.append(i**3) #i upphöjt i 3. #append lägger till i slutet av listan\n",
     "cubes"
    ]
   },
