--- a/Excercise/03-for-statements-excericse.ipynb
+++ b/Excercise/03-for-statements-excericse.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Count numbers "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -39,6 +46,28 @@
     "\n",
     "for i in range(-10, 11, 2):   ##Syntax range(start, stop, step)\n",
     "    print(i, end = \"\\t\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Arithmetic sum\n",
+    "Use a for statement to compute the following sums:\n",
+    "\n",
+    "a) sum = 1+2+3+4...+99+100\n",
+    "\n",
+    "b) sum = 1+3+5...+97+99"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(1, 100):\n",
+    "    print(f\"Summan är {i}*"
    ]
   }
  ],
