--- a/Code-Along/L3-Lists-slicing.ipynb
+++ b/Code-Along/L3-Lists-slicing.ipynb
@@ -170,7 +170,7 @@
     }
    ],
    "source": [
-    "# Normala sättet using appen\n",
+    "# Normala sättet using append\n",
     "\n",
     "cubes = []\n",
     "\n",
