--- a/Code-Along/L3-For-loops.ipynb
+++ b/Code-Along/L3-For-loops.ipynb
@@ -116,7 +116,8 @@
     "for row in range(1,4):\n",
     "    for col in range(1,4):\n",
     "        print(f\"({row},{col})\",end=\"\")\n",
-    "    print() ##newline"
+    "    print() ##newline\n",
+    "    "
    ]
   }
  ],
