03-for-statement-excercise

--- a/Excercise/03-for-statements-excericse.ipynb
+++ b/Excercise/03-for-statements-excericse.ipynb
@@ -237,6 +237,26 @@
     "        c=i*j\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Faculty \n",
+    "\n",
+    "Use a for statement to compute  𝑛! .\n",
+    "\n",
+    "𝑛!=1⋅2⋅3⋅…⋅(𝑛−1)⋅𝑛 \n",
+    "\n",
+    "Let the user input  𝑛 ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
