--- a/Code-Along/L5-Strings.ipynb
+++ b/Code-Along/L5-Strings.ipynb
@@ -103,28 +103,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "f-string: single '}' is not allowed (1485690978.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [19]\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(f\"{quote}[0]=}\")\u001b[0m\n\u001b[1;37m                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m f-string: single '}' is not allowed\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quote[0]: !\n",
+      "quote[-1]: e\n",
+      "quote[-4:]: True\n",
+      "quote[1:6]: False\n",
+      "Backwards quote[::-1]: eurT s'ti esuaceb ynnuf s'ti - eslaF!\n"
      ]
     }
    ],
    "source": [
-    "quote = \"!False - it's funny because it's true\"\n",
+    "quote = \"!False - it's funny because it's True\" # works, note different enkelfnutt/dubbelfnutt \n",
+    "#quote = '!False - it's funny because it's True' # doesn't work\n",
     "\n",
-    "print(f\"{quote}[0]=}\")\n",
-    "print(f\"{quote}[:6]=}\")\n",
-    "print(f\"{quote}[-4:]=}\")\n",
-    "\n",
-    "print(f\"Backwards: {quote[::-1]=}\"))   ## I listor kan man göra kolonn kolonn minus ett för att addressera listans ordning\n",
-    "\n",
-    "print(f\"Length of string: {len(quote)} characters\")"
+    "print(f\"quote[0]: {quote[0]}\")\n",
+    "print(f\"quote[-1]: {quote[-1]}\")\n",
+    "print(f\"quote[-4:]: {quote[-4:]}\")\n",
+    "print(f\"quote[1:6]: {quote[1:6]}\") # [start:stop-1]\n",
+    "print(f\"Backwards quote[::-1]: {quote[::-1]}\") # [start:stop-1:step]  ## I listor kan man göra kolonn kolonn -1 för att adressa listans ordning"
    ]
   },
   {
