Strings-code-along

--- a/Code-Along/L5-Strings.ipynb
+++ b/Code-Along/L5-Strings.ipynb
@@ -201,6 +201,60 @@
    "source": [
     "help(str.split)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Regular expression\n",
+    "\n",
+    "find particular patterns in a string\n",
+    "\n",
+    "e.g. phone numbers, personal numbers, emails .."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['021-432567', '041-414546', '739-231451']\n",
+      "['021-432567', '041-414546', '739-231451']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re #Regular expression\n",
+    "\n",
+    "text = \"Mitt telefonnummer är 021-432567, \\\n",
+    "    Adas telefonnummer är 041-414546, Bedas: 0739-231451\"\n",
+    "\n",
+    "# now i want to extract numbers\n",
+    "\n",
+    "match1 = re.findall(r\"\\d\\d\\d-\\d\\d\\d\\d\\d\\d\", text)   #re.findall letar efter mönster  #\\d \n",
+    "print(match1)\n",
+    "match2 = re.findall(r\"\\d{3}-\\d{6}\", text)    # r\"\"  - står för raw string, den ska tolka som det är skrivet och escapar inte characters\n",
+    "print(match2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re \n",
+    "\n",
+    "# find all words ending with att\n",
+    "text = \"Det var en gång en katt, som tog på sig en hatt, jag blev matt, så jag spelade schack och vann med skolmatt\"\n",
+    "\n",
+    "match = re.findall(r\".att\", text)\n",
+    "print(match)"
+   ]
   }
  ],
  "metadata": {
