for-statements-excercise

--- a/Excercise/03-for-statements-excericse.ipynb
+++ b/Excercise/03-for-statements-excericse.ipynb
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,10 +253,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 * 1 = 1\n",
+      "\n",
+      "1 * 2 = 2\n",
+      "\n",
+      "2 * 3 = 6\n",
+      "\n",
+      "6 * 4 = 24\n",
+      "\n",
+      "Ditt svar är 24\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Input any number you want\"))\n",
+    "my_sum = 1\n",
+    "\n",
+    "\n",
+    "for i in range(n): \n",
+    "    print(f\"{my_sum} * {i+1} = {my_sum * (i+1)}\\n\")\n",
+    "    my_sum *= i + 1\n",
+    "\n",
+    "print(f\"Ditt svar är {my_sum}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Guess the number\n",
+    "\n",
+    "\n",
+    "The computer thinks of a four-digit number. Start by creating a random four-digit number. Use for statement to figure out a correct guess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 346,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7792\n",
+      "What number am i thinking of(Four digits)?\n",
+      "0. Higher, 5499.5 is too low\n",
+      "1. Higher, 7749.25 is too low\n",
+      "2. Lower, 8874.125 is too high\n",
+      "3. Lower, 8311.6875 is too high\n",
+      "4. Lower, 8030.46875 is too high\n",
+      "5. Lower, 7889.859375 is too high\n",
+      "6. Lower, 7819.5546875 is too high\n",
+      "7. Higher, 7784.40234375 is too low\n",
+      "8. Lower, 7801.978515625 is too high\n",
+      "9. Lower, 7793.1904296875 is too high\n",
+      "10. Higher, 7788.79638671875 is too low\n",
+      "11. Higher, 7790.993408203125 is too low\n",
+      "You win 7792.0919189453125 is the right number\n",
+      "You win 7792.0919189453125 is the right number\n",
+      "You win 7792.0919189453125 is the right number\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random as rnd\n",
+    "import math\n",
+    "\n",
+    "correct_guess = rnd.randint(1000,9999)\n",
+    "amount_guesses = int(math.log2(8999))\n",
+    "high = 9999\n",
+    "low = 1000\n",
+    "\n",
+    "print(f\"{correct_guess}\")\n",
+    "\n",
+    "## Nu måste jag hitta ett tal i for-loopen för att gissa \n",
+    "\n",
+    "print(\"What number am i thinking of(Four digits)?\")\n",
+    "for i in range(amount_guesses + 2):\n",
+    "    computer_guess = (high + low) / 2\n",
+    "## if correct guess\n",
+    "    if  (correct_guess) == int(computer_guess):\n",
+    "        print(f\"You win {computer_guess} is the right number\")\n",
+    "# if incorrect guess\n",
+    "    else:\n",
+    "        if  (correct_guess) > int(computer_guess):\n",
+    "            low = (computer_guess)\n",
+    "            print(f\"{i}. Higher, {computer_guess} is too low\")\n",
+    "        else:\n",
+    "            high = computer_guess\n",
+    "            print(f\"{i}. Lower, {computer_guess} is too high\")\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
