--- a/Excercise/03-for-statements-excericse.ipynb
+++ b/Excercise/03-for-statements-excericse.ipynb
@@ -296,34 +296,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 415,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7792\n",
+      "2497\n",
       "What number am i thinking of(Four digits)?\n",
-      "0. Higher, 5499.5 is too low\n",
-      "1. Higher, 7749.25 is too low\n",
-      "2. Lower, 8874.125 is too high\n",
-      "3. Lower, 8311.6875 is too high\n",
-      "4. Lower, 8030.46875 is too high\n",
-      "5. Lower, 7889.859375 is too high\n",
-      "6. Lower, 7819.5546875 is too high\n",
-      "7. Higher, 7784.40234375 is too low\n",
-      "8. Lower, 7801.978515625 is too high\n",
-      "9. Lower, 7793.1904296875 is too high\n",
-      "10. Higher, 7788.79638671875 is too low\n",
-      "11. Higher, 7790.993408203125 is too low\n",
-      "You win 7792.0919189453125 is the right number\n",
-      "You win 7792.0919189453125 is the right number\n",
-      "You win 7792.0919189453125 is the right number\n"
+      "0. Lower, 5499 is too high\n",
+      "1. Lower, 3249 is too high\n",
+      "2. Higher, 2124 is too low\n",
+      "3. Lower, 2687 is too high\n",
+      "4. Higher, 2406 is too low\n",
+      "5. Lower, 2546 is too high\n",
+      "6. Higher, 2476 is too low\n",
+      "7. Lower, 2511 is too high\n",
+      "8. Higher, 2493 is too low\n",
+      "9. Lower, 2502 is too high\n",
+      "10. Lower, 2498 is too high\n",
+      "11. Higher, 2496 is too low\n",
+      "You win 2497 is the right number\n",
+      "You win 2497 is the right number\n",
+      "You win 2497 is the right number\n"
      ]
     }
    ],
    "source": [
+    "## One solution using logarithm to half the guesses while taking hints\n",
+    "\n",
     "import random as rnd\n",
     "import math\n",
     "\n",
@@ -341,16 +343,50 @@
     "    computer_guess = (high + low) / 2\n",
     "## if correct guess\n",
     "    if  (correct_guess) == int(computer_guess):\n",
-    "        print(f\"You win {computer_guess} is the right number\")\n",
+    "        print(f\"You win {int(computer_guess)} is the right number\")  ## Kan breaka om man inte vill ha you win för många ggr\n",
     "# if incorrect guess\n",
     "    else:\n",
     "        if  (correct_guess) > int(computer_guess):\n",
     "            low = (computer_guess)\n",
-    "            print(f\"{i}. Higher, {computer_guess} is too low\")\n",
+    "            print(f\"{i}. Higher, {int(computer_guess)} is too low\")\n",
     "        else:\n",
     "            high = computer_guess\n",
-    "            print(f\"{i}. Lower, {computer_guess} is too high\")\n",
+    "            print(f\"{i}. Lower, {int(computer_guess)} is too high\")\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 465,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Another solution where the computer guesses random numbers instead, but not the same number over and over again\n",
+    "\n",
+    "import random as rnd\n",
+    "import math\n",
+    "\n",
+    "correct_guess = rnd.randint(1000,9999)\n",
+    "previous_guesses = []\n",
+    "\n",
+    "for guess in range(1000,9999):\n",
+    "    computer_guess = rnd.randint(1000,9999)\n",
+    "\n",
+    "\n",
+    "## Checking if number has already been guessed\n",
+    "    for previous_guess in previous_guesses:\n",
+    "        if previous_guess == computer_guess:\n",
+    "            computer_guess = rnd.randint(1000,9999)\n",
+    "\n",
+    "\n",
+    "    previous_guesses.append(computer_guess)  ## Append betyder att den lägger till previous guesses i listan\n",
+    "\n",
+    "    if computer_guess == correct_guess:    ## If computer guessed correctly \n",
+    "        print(f\"You win {computer_guess} is the right number\")\n",
+    "        print(f\"It took {guess + 1} attempt\")\n",
+    "        print(f\"{previous_guesses}\")\n",
+    "        break\n",
     "\n"
    ]
   }
