--- a/Excercise/04-Lists-Excercises.ipynb
+++ b/Excercise/04-Lists-Excercises.ipynb
@@ -264,12 +264,13 @@
     "        dice = rnd.randint(1,6)\n",
     "        # and if the dice is equal to six it will add one to the list in probabilty list\n",
     "        if dice == 6:\n",
+    "            # here the amount of sixes is added +1 \n",
     "            amount_sixes += 1\n",
-    "            ## i append the list so i can\n",
     "    probabilty_list.append(amount_sixes / number)\n",
     "    print(f\"{amount_sixes}\")\n",
     "print(probabilty_list)\n",
     "\n",
+    "## Get it out on a plot list for visual intepretation\n",
     "plt.plot(probabilty_list)\n"
    ]
   }
