--- a/Excercise/04-Lists-Excercises.ipynb
+++ b/Excercise/04-Lists-Excercises.ipynb
@@ -273,6 +273,17 @@
     "## Get it out on a plot list for visual intepretation\n",
     "plt.plot(probabilty_list)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Monte Carlo simulation (**)\n",
+    "  a) Simulate 5000 uniformly distributed points between -1 and 1,  X∼U(−1,1) . \n",
+    "  Now calculate the Euclidean distances between each point and the origin (0,0),  di=x2i+y2i−−−−−−√ . For  di<1  plot the point with one color, and for  di>1  plot the point in another color,  i={1,…,5000} . (**)\n",
+    "\n",
+    "  b) Calculate the fraction between number of inner points and number of outer points. What do you this will converge to when number of points reaches infinity? (**)"
+   ]
   }
  ],
  "metadata": {
