--- a/Code-Along/L5-Strings.ipynb
+++ b/Code-Along/L5-Strings.ipynb
@@ -138,39 +138,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: '14 4 '",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\j_osc\\OneDrive\\Documents\\Github\\PythonSchool\\Code-Along\\L5-Strings.ipynb Cell 8\u001b[0m in \u001b[0;36m<cell line: 12>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Code-Along/L5-Strings.ipynb#X13sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m numbers \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mAnge tre tal(separerade med kommatecken): \u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Code-Along/L5-Strings.ipynb#X13sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39m# 1. split thte string into a list of 3 strings\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Code-Along/L5-Strings.ipynb#X13sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m# 2. type convert each string into a float by iterating through the list\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Code-Along/L5-Strings.ipynb#X13sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Code-Along/L5-Strings.ipynb#X13sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Code-Along/L5-Strings.ipynb#X13sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39m# När man använder ett kommatecken så splittar man (används som separator)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Code-Along/L5-Strings.ipynb#X13sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m# detta är även en list comprehension\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Code-Along/L5-Strings.ipynb#X13sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m numbers \u001b[39m=\u001b[39m [\u001b[39mfloat\u001b[39m(number) \u001b[39mfor\u001b[39;00m number \u001b[39min\u001b[39;00m numbers\u001b[39m.\u001b[39msplit(\u001b[39m\"\u001b[39m\u001b[39m,\u001b[39m\u001b[39m\"\u001b[39m)]   \u001b[39m## Man måste typomvandla floaten till en lista ##Typomvandlar varje element.\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Code-Along/L5-Strings.ipynb#X13sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m mean_value \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m(numbers)\u001b[39m/\u001b[39m\u001b[39mlen\u001b[39m(numbers)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Code-Along/L5-Strings.ipynb#X13sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mnumbers\u001b[39m=}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;32mc:\\Users\\j_osc\\OneDrive\\Documents\\Github\\PythonSchool\\Code-Along\\L5-Strings.ipynb Cell 8\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Code-Along/L5-Strings.ipynb#X13sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m numbers \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mAnge tre tal(separerade med kommatecken): \u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Code-Along/L5-Strings.ipynb#X13sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39m# 1. split thte string into a list of 3 strings\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Code-Along/L5-Strings.ipynb#X13sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m# 2. type convert each string into a float by iterating through the list\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Code-Along/L5-Strings.ipynb#X13sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Code-Along/L5-Strings.ipynb#X13sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Code-Along/L5-Strings.ipynb#X13sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39m# När man använder ett kommatecken så splittar man (används som separator)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Code-Along/L5-Strings.ipynb#X13sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m# detta är även en list comprehension\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Code-Along/L5-Strings.ipynb#X13sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m numbers \u001b[39m=\u001b[39m [\u001b[39mfloat\u001b[39;49m(number) \u001b[39mfor\u001b[39;00m number \u001b[39min\u001b[39;00m numbers\u001b[39m.\u001b[39msplit(\u001b[39m\"\u001b[39m\u001b[39m,\u001b[39m\u001b[39m\"\u001b[39m)]   \u001b[39m## Man måste typomvandla floaten till en lista ##Typomvandlar varje element.\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Code-Along/L5-Strings.ipynb#X13sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m mean_value \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m(numbers)\u001b[39m/\u001b[39m\u001b[39mlen\u001b[39m(numbers)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Code-Along/L5-Strings.ipynb#X13sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mnumbers\u001b[39m=}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: '14 4 '"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MATH has 4 letters\n",
+      "BIOLOGY has 7 letters\n",
+      "CHEMISTRY has 9 letters\n",
+      "PROGRAMMING has 11 letters\n"
      ]
     }
    ],
    "source": [
-    "## not possible\n",
-    "## numbers = float(input(\"Ange tre tal(separerade med kommatecken): \"))\n",
+    "subjects = \"Math, biology  ,   cHeMistry  ,  PrOgramming      \"\n",
+    "subjects = subjects.split(\",\") # argument defines the pattern which the string should be splitted\n",
     "\n",
-    "numbers = input(\"Ange tre tal(separerade med kommatecken): \")\n",
+    "subjects = [subject.strip().upper() for subject in subjects] # strips and make uppercase\n",
     "\n",
-    "# 1. split thte string into a list of 3 strings\n",
-    "# 2. type convert each string into a float by iterating through the list\n",
+    "for subject in subjects: \n",
+    "    print(f\"{subject} has {len(subject)} letters\") \n",
+    "    # len() returns the number of items, for a string it returns the number of characters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\j_osc\\OneDrive\\Documents\\Github\\PythonSchool\\Code-Along\\L5-Strings.ipynb Cell 9\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Code-Along/L5-Strings.ipynb#X15sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mfor\u001b[39;00m number \u001b[39min\u001b[39;00m numbers:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Code-Along/L5-Strings.ipynb#X15sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     \u001b[39msum\u001b[39m \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m number\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Code-Along/L5-Strings.ipynb#X15sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m mean \u001b[39m=\u001b[39m \u001b[39msum\u001b[39;49m\u001b[39m/\u001b[39;49m\u001b[39mlen\u001b[39;49m(numbers)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/j_osc/OneDrive/Documents/Github/PythonSchool/Code-Along/L5-Strings.ipynb#X15sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mMedelvärdet av dina tal är \u001b[39m\u001b[39m{\u001b[39;00mmean\u001b[39m:\u001b[39;00m\u001b[39m.1f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
+     ]
+    }
+   ],
+   "source": [
+    "# mean from input\n",
+    "numbers = input(\"Ange några tal separerade med mellanslag: \").split()\n",
+    "numbers = [float(number) for number in numbers]\n",
     "\n",
+    "sum = 0\n",
     "\n",
-    "# När man använder ett kommatecken så splittar man (används som separator)\n",
-    "# detta är även en list comprehension\n",
-    "numbers = [float(number) for number in numbers.split(\",\")]   ## Man måste typomvandla floaten till en lista ##Typomvandlar varje element.\n",
-    "mean_value = sum(numbers)/len(numbers)\n",
+    "for number in numbers:\n",
+    "    sum += number\n",
     "\n",
-    "print(f\"{numbers=}\")\n",
-    "print(f\"{mean_value=}\")"
+    "mean = sum/len(numbers)\n",
+    "print(f\"Medelvärdet av dina tal är {mean:.1f}\")"
    ]
   },
   {
